syntax = "proto2";

package rokid.open.speech.v1;

import public "speech_types.proto";

message SpeechRequest {
  required int32 id = 1;

  required ReqType type = 2;

  optional bytes voice = 3;

  optional string asr = 4;

  // zh
  // en
  optional string lang = 5;

  // pcm
  // opu
  // opu2
  optional string codec = 6;

  // vt = voice trigger
  // deprecated
  optional string vt = 7;

  // json string: options of framework
  // {
  //   "voice_trigger": "xxx",
  //   "voice_power": "xxx",
  //   "trigger_start": "xxx",
  //   "trigger_length": "xxx",
  //   "stack": "xxx"
  // }
  optional string framework_options = 8;

  // json string: options of skills
  // {
  //   "media_player_status": "xxx"
  // }
  optional string skill_options = 9;
}

message SpeechResponse {
  required int32 id = 1;

  required SpeechErrorCode result = 2;

  optional string asr = 3;

  optional string nlp = 4;

  optional string action = 5;

  optional bool finish = 6;

  // {
  //   "activation": "fake|reject|accept|none"
  // }
  optional string extra = 7;
}
